sass/footer.sass
// Information about the logo file

$source: url(resources/logos.png)

$osi_width: 160px
$ucf_width: 360px
$sga_width: 150px
$dg_width: 130px

$total_width: 800px
$height: 150px

// Calculations to "center" each image within its space

$ucf_offset: 0%
$sga_offset: ($ucf_width) / ($total_width - $sga_width) * 100%
$osi_offset: ($ucf_width + $sga_width) / ($total_width - $osi_width) * 100%
$dg_offset: 100%

footer
	padding: 4em 0
	text-align: center
	width: 100%
	
	p
		margin-top: 2em
		color: white
		font-size: 1.5em
		font-weight: 300

	a
		text-decoration: none
		color: rgba(255,201,4,1)
		transition: color 0.18s ease-in-out

		&:hover
			color: lighten(rgba(255,201,4,1),50%)
	
	.logos
		font-size: 0
		height: 150px
		text-align: center
		margin: auto
		width: $total_width

	.osi, .ucf, .sga, .dg
		background:
			image: $source
			repeat: no-repeat
		float: left
		display: inline-block
		height: $height
		margin: 0
		text-indent: -10000px

	.ucf
		background-position: 0 0
		width: $ucf_width

	.sga
		background-position: -$ucf_width 0
		width: $sga_width

	.osi
		background-position: -($ucf_width + $sga_width) 0
		width: $osi_width

	.dg
		background-position: -($ucf_width + $sga_width + $osi_width) 0
		width: $dg_width

@media screen and (max-width: $total_width)
	footer
		.logos
			height: auto
			width: 100%
			
		.osi, .ucf, .sga, .dg
			padding-top: $height / $total_width * 100%
			line-height: 0
			height: 0

		.ucf
			background-position: $ucf_offset 0
			background-size: $total_width / $ucf_width * 100%
			width: $ucf_width / $total_width * 100%

		.sga
			background-position: $sga_offset 0
			background-size: $total_width / $sga_width * 100%
			width: $sga_width / $total_width * 100%

		.osi
			background-position: $osi_offset 0
			background-size: $total_width / $osi_width * 100%
			width: $osi_width / $total_width * 100%

		.dg
			background-position: $dg_offset 0
			background-size: $total_width / $dg_width * 100%
			width: $dg_width / $total_width * 100%

